--- a/teste.html
+++ b/teste.html
@@ -13,7 +13,10 @@
 
 <body>
     <h1 id="h1">2025</h1>
-    <p>Hello Turma</p>
+    <p>Hello Turma</p><br>
+
+    <p><s>Meu nome é Jesus </s></p>
+
     
 </body>
 
